update custom delimeter test

--- a/handlebars/src/test/resources/templates/simple-customDelimiter.hbs
+++ b/handlebars/src/test/resources/templates/simple-customDelimiter.hbs
@@ -2,4 +2,5 @@
 <&sample.result.first&>
 <&sample.result.second.foo&>
 <&#each sample.arr&><&this&> <&/each&>
+{{sample.result.first}}
 </knotx.snipet>
