empty context test

--- a/handlebars/src/test/resources/templates/simple-customDelimiter.hbs
+++ b/handlebars/src/test/resources/templates/simple-customDelimiter.hbs
@@ -1,6 +1,6 @@
 <knotx:snippet>
-<&sample.result.first&>
-<&sample.result.second.foo&>
-<&#each sample.arr&><&this&> <&/each&>
-{{sample.result.first}}
+  First: <&sample.result.first&>
+  Second: <&sample.result.second.foo&>
+  Array: <&#each sample.arr&><&this&> <&/each&>
+  {{sample.result.first}}
 </knotx.snipet>
